# Pico-FT8-TX

./: .gitignore  CMakeLists.txt  README.md  README_fork_Jochen.md  build.sh  dco2.pio.h  defines.h  init.c  main.c  pico-wspr-tx.uf2  power_status.c  power_status.h
TxChannel/: TxChannel.c
WSPRbeacon/: WSPRbeacon.c
debug/: logutils.c
wsjtx_helper/: README.md  transceiver_server.py
